--- a/myfirstproject/src/index.css
+++ b/myfirstproject/src/index.css
@@ -1,13 +1,159 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+}
+body{
+  height: 100vh;
+  background-color: rgb(0, 0, 0);
+  font-size: 3rem;
+  font-weight: bold;
+  display: flex;
+  flex-direction: column;
+}
+::-webkit-scrollbar{
+	width: 12px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+::-webkit-scrollbar-thumb{
+	border-radius: 10px;
+	background: linear-gradient(transparent, #5f59ab);
+}
+
+::-webkit-scrollbar-thumb:hover{
+	background: linear-gradient(transparent, #979fa1 , rgb(241, 238, 238));
+}
+
+.HeaderPrincipal{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.contLogo{
+  width: 10%;
+}
+.Logotype{
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  margin: 1rem;
+  border: 2px solid #6490f7 ;
+  filter: drop-shadow(5px 5px  20px #6490f7 );
+}
+@media (prefers-reduced-motion: no-preference) {
+  .Logotype {
+    animation: Logotype-spin infinite 20s linear;
+  }
+}
+@keyframes Logotype-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+.tittle{
+  color: white;
+  font-weight: bold;
+  font-size: 4.6rem;
+  text-shadow: 5px 5px 10px #6490f7;
+}
+.nav{
+  width: 50%;
+  display: flex;
+  flex-direction: row;
+}
+
+.list{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.Ancla1{
+  color: white;
+  text-decoration: none;
+  font-size: 1.8rem;
+  transition: 0.4s;
+
+}
+.Ancla1:hover{
+  color: #6490f7;
+  transition: 0.4s;
+}
+
+hr{
+  width: 99%;
+  color: rgb(178, 178, 178);
+}
+main{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.title2{
+  margin: 2rem;
+  font-size: 3rem;
+  color: white;
+}
+.cont-cards{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+.card{
+  width: 18rem;
+  height: 15rem;
+  background-color: #151515;
+  border-radius: 5px;
+  box-shadow: 2px 2px 10px 2px #5f59ab;
+  padding: 0.5rem;
+  margin: 2rem;
+  margin-left: 5rem;
+  text-align: center;
+  transition: all .8s;
+
+}
+.card:hover{
+  transform: scale(1.2);
+  transition: all .7s;
+  box-shadow: 2px 2px 10px 2px #979fa1;
+}
+i{
+  color: #6490f7 ;
+}
+.text{
+  text-align: center;
+  font-size: 1.1rem;
+  margin-top: 1rem;
+  color: white;
+}
+
+.logos{
+  width: 100px;
+}
+
+.modal {
+  width: 50%;
+  height: 78%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+flex-wrap: wrap;
+  position: fixed;
+  z-index: 1;
+  display: none;
+  background-image: linear-gradient(to bottom, #a1baca, rgb(243, 243, 243));
+  box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.1);
+  border-radius: 2%;
+  animation: show 1s;
+margin-left: 20rem;
+margin-top: 2rem;
 }
